--- a/moby_dick.html
+++ b/moby_dick.html
@@ -41,7 +41,8 @@
 
       <a href="https://www.softcover.io/read/6070fb03/moby-dick"
          target="_blank" rel="noopener">
-        <img src="images/moby_dick.png" alt="Moby-Dick（白鯨）">
+        <img src="images/moby_dick.png" alt="Moby-Dick（白鯨）" 
+        style="display: block; margin: 0 auto; float: left;">
       </a>
 
       <p>
